--- a/fly.toml
+++ b/fly.toml
@@ -9,13 +9,24 @@ primary_region = "arn"
 [env]
   PORT = "3000"
 
-[http_service]
+[[services]]
   internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+  [[services.http_checks]]
+  interval = 10000
+  grace_period = "5s"
+  method = "get"
+  path = "/health"
+  protocol = "http"
+  restart_limit = 0
+  timeout = 2000
+  tls_skip_verify = false
+  [services.http_checks.headers]
 
 [deploy]
   release_command = "npm run build"
@@ -26,20 +37,4 @@ primary_region = "arn"
 [build]
   [build.args]
     NODE_VERSION = "16.19.1"
-
-[[services.tcp_checks]]
-  grace_period = "1s"
-  interval = "15s"
-  restart_limit = 0
-  timeout = "2s"
-
-[[services.http_checks]]
-  interval = 10000
-  grace_period = "5s"
-  method = "get"
-  path = "/health"
-  protocol = "http"
-  restart_limit = 0
-  timeout = 2000
-  tls_skip_verify = false
-  [services.http_checks.headers]
+  
