--- a/fly.toml
+++ b/fly.toml
@@ -11,22 +11,27 @@ primary_region = "arn"
 
 [[services]]
   internal_port = 3000
-  force_https = true
+  protocol = "tcp"
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
 
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
+
   [[services.http_checks]]
-  interval = 10000
-  grace_period = "5s"
-  method = "get"
-  path = "/health"
-  protocol = "http"
-  restart_limit = 0
-  timeout = 2000
-  tls_skip_verify = false
-  [services.http_checks.headers]
+    interval = 10000
+    grace_period = "5s"
+    method = "get"
+    path = "/health"
+    protocol = "http"
+    restart_limit = 0
+    timeout = 2000
+    tls_skip_verify = false
+    [services.http_checks.headers]
 
 [deploy]
   release_command = "npm run build"
