--- a/fly.toml
+++ b/fly.toml
@@ -16,6 +16,15 @@ primary_region = "arn"
   auto_start_machines = true
   processes = ["app"]
 
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
   [[services.tcp_checks]]
     grace_period = "1s"
     interval = "15s"
