--- a/fly.toml
+++ b/fly.toml
@@ -42,6 +42,14 @@ primary_region = "arn"
     tls_skip_verify = false
     [services.http_checks.headers]
 
+  [[services.script_checks]]
+    command       = "/app/health_check.sh"
+    args          = ["a", "b", "c"]
+    grace_period  = "1s"
+    interval      = "5s"
+    restart_limit = 0
+    timeout       = "1s"
+
 [deploy]
   release_command = "npm run build"
 
