--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
-    "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.11"
+    "style-loader": "^1.2.1"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -56,6 +55,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   }
 }
