--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "polar-meadow-41009"
           heroku_email: "valtteri.kantanen@helsinki.fi"
+          healthcheck: "https://polar-meadow-41009.herokuapp.com/health"
+          checkstring: "ok"
