Don't record videos on e2e testing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run --config video=false"
   },
   "repository": {
     "type": "git",
