--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,6 +43,8 @@ jobs:
   tag_release:
     needs: simple_deployment_pipeline
     runs-on: ubuntu-20.04
+    permissions:
+      contents: write
     steps:
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' }}
