Scheduled health check is working, moving to a once a day schedule

--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -2,7 +2,7 @@ name: Health check
 
 on:
   schedule:
-    - cron: '0-59 * * * *'
+    - cron: '30 7 * * *' # runs once a day at 07:30
 
 jobs:
   health_check:
