--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "polar-meadow-41009"
-          heroku_email: "valtteri.kantanen@helsinki.fi"
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
           healthcheck: "https://polar-meadow-41009.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
